tests/baselines/reference/nodePackageSelfNameScoped(module=node18).errors.txt
index.cts(2,23): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("@scope/package")' call instead.


==== index.ts (0 errors) ====
    // esm format file
    import * as self from "@scope/package";
    self;
==== index.mts (0 errors) ====
    // esm format file
    import * as self from "@scope/package";
    self;
==== index.cts (1 errors) ====
    // cjs format file
    import * as self from "@scope/package";
                          ~~~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("@scope/package")' call instead.
    self;
==== package.json (0 errors) ====
    {
        "name": "@scope/package",
        "private": true,
        "type": "module",
        "exports": "./index.js"
    }